--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^5.17.1",
     "autoprefixer": "10.4.14",
+    "formik": "^2.2.9",
     "next": "13.4.2",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-icons": "^4.8.0",
+    "tailwindcss": "3.3.2",
+    "yup": "^1.1.1"
   }
 }
