--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^5.17.1",
     "autoprefixer": "10.4.14",
+    "firebase": "^12.1.0",
     "formik": "^2.2.9",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
